tests/snapshots/contract_snapshots__ls_auth_error.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "ok": false,
  "command": "ls",
  "version": "[VERSION]",
  "contract_version": 1,
  "error": {
    "code": "auth.failed",
    "message": "[ERROR_MSG]",
    "suggestion": "Run `n8nc auth add notoken --token <api_key>` or set N8NC_TOKEN_NOTOKEN."
  }
}
