tests/snapshots/contract_snapshots__ls_success.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "ok": true,
  "command": "ls",
  "version": "[VERSION]",
  "contract_version": 1,
  "data": {
    "items": [
      {
        "id": "wf-1",
        "name": "Test Workflow",
        "active": true,
        "updated_at": "2026-01-02T00:00:00Z"
      }
    ],
    "total": 1,
    "limit": 100,
    "offset": 0,
    "truncated": false
  }
}
