tests/snapshots/contract_snapshots__pull_not_found.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "not_found",
    "message": "[ERROR_MSG]"
  }
}
