tests/snapshots/contract_snapshots__push_conflict.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "conflict",
    "message": "[ERROR_MSG]",
    "hint": "Run `n8nc pull <id>` again before pushing."
  }
}
