tests/snapshots/contract_snapshots__runs_ls_auth_error.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "auth",
    "message": "[ERROR_MSG]",
    "hint": "Run `n8nc auth add notoken --token <api_key>` or set N8NC_TOKEN_NOTOKEN."
  }
}
