tests/snapshots/contract_snapshots__status_no_repo.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "config",
    "message": "[ERROR_MSG]"
  }
}
